--- a/public/vr.html
+++ b/public/vr.html
@@ -4,6 +4,7 @@
 	<title>Hello, World! A-Frame VR World!</title>
 </head>
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
+	<script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v3.8.0/dist/aframe-extras.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript">
 		var socket = io();
