--- a/public/vr.html
+++ b/public/vr.html
@@ -25,12 +25,12 @@
 
 			socket.on('toVRDrawing', function(data){
 				let entity = document.createElement('a-entity')
-				let path = dummy(data)
-				console.log('this is your path',path)
-				entity.setAttribute('tube' : `path: ${path}`)
-				document.querySelector('a-scene').appendChild(entity)
+				let newPath = dummy(data)
+				console.log('this is your path',newPath)
+				// entity.setAttribute('tube' : `path: ${path}`)
+				// document.querySelector('a-scene').appendChild(entity)
 			})
-			
+
 			function dummy (arr) {
 				let results = ''
 				arr.forEach(function(element) {
