--- a/public/vr.html
+++ b/public/vr.html
@@ -28,6 +28,7 @@
 				let newPath = dummy(data)
 				console.log('this is your path',newPath)
 				entity.setAttribute("tube", {})
+				entity.setAttribute("path", newPath)
 				document.querySelector('a-scene').appendChild(entity)
 			})
 
