--- a/public/vr.html
+++ b/public/vr.html
@@ -27,8 +27,7 @@
 				let entity = document.createElement('a-entity')
 				let newPath = dummy(data)
 				console.log('this is your path',newPath)
-				entity.setAttribute("tube", {})
-				entity.setAttribute("path", newPath)
+				entity.setAttribute("tube", {"path": data})
 				document.querySelector('a-scene').appendChild(entity)
 			})
 
