--- a/public/vr.html
+++ b/public/vr.html
@@ -27,7 +27,8 @@
 				let entity = document.createElement('a-entity')
 				let newPath = dummy(data)
 				console.log('this is your path',newPath)
-				entity.setAttribute("tube", {"path": '0 1 1, 1 2 3, '})
+				console.log( typeof newPath)
+				entity.setAttribute("tube", {"path": newPath})
 				document.querySelector('a-scene').appendChild(entity)
 			})
 
