--- a/public/vr.html
+++ b/public/vr.html
@@ -35,7 +35,7 @@
 			function dummy (arr) {
 				let results = ''
 				arr.forEach(function(element) {
-					results = results + element.x/100 + ' ' + element.y/100 + ' ' + '0, '
+					results = results + element.x/10 + ' ' + element.y/10 + ' ' + element.y/10 + ','
 				})
 				return results
 			}
