--- a/public/vr.html
+++ b/public/vr.html
@@ -28,7 +28,7 @@
 				let newPath = dummy(data)
 				console.log('this is your path',newPath)
 				console.log( typeof newPath)
-				entity.setAttribute("tube", {"path": newPath})
+				entity.setAttribute("tube", {"path": '5 0 5, 5 0 -5, -5 0 -5'})
 				document.querySelector('a-scene').appendChild(entity)
 			})
 
