--- a/public/vr.html
+++ b/public/vr.html
@@ -29,7 +29,7 @@
 				console.log('this is your path',newPath)
 				console.log( typeof newPath)
 				console.log(newPath)
-				entity.setAttribute("tube", {"path": '20.2 0 13.05,20.35 0 13,20.4 0 12.85,20.5 0 12.8,20.6 0 12.85,20.75 0 12.7,20.85 0 12.7,20.9 0 12.7,20.95 0 12.65,21 0 12.5,21 0 12.5,21 0 12.55,21 0 12.5,21 0 12.5,20.95 0 12.6,21 0 12.5,20.9 0 12.5,20.95 0 12.55,20.9 0 12.55,20.9 0 12.45,20.85 0 12.5,20.8 0 12.65,20.55 0 12.7,20.6 0 12.7,20.55 0 12.85,20.55 0 12.85,20.55 0 12.8,20.55 0 12.9,20.45 0 13.15,20.35 0 13.25,20.25 0 13.45,20.2 0 13.65,20.2 0 13.9,20.2 0 14.35,20.1 0 14.75,23.1 0 21.85,'})
+				entity.setAttribute("tube", {"path": '20.35 0 13.25,20.25 0 13.45,20.2 0 13.65,20.2 0 13.9,20.2 0 14.35,20.1 0 14.75,23.1 0 21.85,'})
 				document.querySelector('a-scene').appendChild(entity)
 			})
 
