--- a/public/vr.html
+++ b/public/vr.html
@@ -29,7 +29,7 @@
 				console.log('this is your path',newPath)
 				console.log( typeof newPath)
 				console.log(newPath)
-				entity.setAttribute("tube", {"path": '20.35 0 13.25,20.25 0 13.45,20.2 0 13.65,20.2 0 13.9,20.2 0 14.35,20.1 0 14.75,23.1 0 21.85,'})
+				entity.setAttribute("tube", {"path": '20.2 0 13.9,20.2 0 14.35,20.1 0 14.75,23.1 0 21.85,'})
 				document.querySelector('a-scene').appendChild(entity)
 			})
 
