--- a/public/vr.html
+++ b/public/vr.html
@@ -25,7 +25,7 @@
 
 			socket.on('toVRDrawing', function(data){
 				let entity = document.createElement('a-entity')
-				// let newPath = dummy(data)
+				let newPath = dummy(data)
 				// console.log('this is your path',newPath)
 				// console.log( typeof newPath)
 				// console.log(newPath)
