--- a/public/vr.html
+++ b/public/vr.html
@@ -26,7 +26,7 @@
 			socket.on('toVRDrawing', function(data){
 				let entity = document.createElement('a-entity')
 				let newPath = dummy(data)
-				// console.log('this is your path',newPath)
+				console.log('this is your path',newPath)
 				// console.log( typeof newPath)
 				// console.log(newPath)
 				entity.setAttribute("tube", {"path": '20.2 0 13.9, 20.2 0 14.35, 20.1 0 14.75, 23.1 0 21.85'})
