--- a/public/vr.html
+++ b/public/vr.html
@@ -26,10 +26,10 @@
 			socket.on('toVRDrawing', function(data){
 				let entity = document.createElement('a-entity')
 				let newPath = dummy(data)
-				console.log('this is your path',newPath)
+				console.log('this is your path',newPath.slice(0, -1))
 				// console.log( typeof newPath)
 				// console.log(newPath)
-				entity.setAttribute("tube", {"path": '20.2 0 13.9, 20.2 0 14.35, 20.1 0 14.75, 23.1 0 21.85'})
+				entity.setAttribute("tube", {"path": newPath.slice(0, -1)})
 				document.querySelector('a-scene').appendChild(entity)
 			})
 
