Last Setting Up

--- a/public/ar1.html
+++ b/public/ar1.html
@@ -87,6 +87,11 @@
       location.href = "https://stackproject.herokuapp.com/ar2"
       console.log(data)
     })
+
+    socket.on('goTodrawAr', function(data) {
+      location.href = "https://stackproject.herokuapp.com/drawingAR"
+      console.log(data)
+    })
   </script>
 
   <script type="text/javascript">
