--- a/public/aframeAR.html
+++ b/public/aframeAR.html
@@ -14,6 +14,11 @@
 	<script>
 		var socket = io()
 		socket.on('newtext', function(data) {console.log(data)})
+
+		socket.on('goTodrawAr', function(data) {
+      location.href = "https://stackproject.herokuapp.com/drawingAR"
+      console.log(data)
+    })
 	</script>
 </body>
 </html>
