--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 	<title>Welcome to My App</title>
 </head>
 <body>
+	<h3>Howdy!</h3>
+	<h2>Please select your viewing experience</h2>
 	<button id ="VR" onclick="location.href = 'https://stackproject.herokuapp.com/vr'" type="button">Creator VR</button>
 	<button id ="Mixed-Reality" onclick="location.href = 'https://stackproject.herokuapp.com/ar1'" type="button">Mixed Reality</button>
 </body>
