Adding function to onclick

--- a/public/vr.html
+++ b/public/vr.html
@@ -103,7 +103,7 @@
 			  <option value="green">Green</option>
 			</select>
 	</div>
-	<button type="button" onclick="">Send Object</button>
+	<button type="button" onclick="receivedDataFromSelect()">Send Object</button>
 	<button type="button" onclick="goToAr2()">Change to Mixed Reality 2 View</button>
 	<button type="button" onclick="test()">Howdy</button>
 	<button type="button" onclick="createBox()">Create a box</button>
