--- a/public/vr.html
+++ b/public/vr.html
@@ -114,8 +114,8 @@
 			<select id="shapeSelect">
 			  <option value="box">Box</option>
 			  <option value="sphere">Sphere</option>
-			  <option value="cone">Cone</option>
-			  <option value="torus-knot">Torus-Knot</option>
+			  <option value="cylinder">Cylinder</option>
+			  <option value="torus">Torus</option>
 			</select>
 		<h3>Please Select a Color</h3>
 			<p>Color</p>
