--- a/public/ar1.html
+++ b/public/ar1.html
@@ -42,7 +42,7 @@
       <a-asset-item id="pokeball-material" src="pokeball-vray.mtl"></a-asset-item>
     </a-assets>
 
-    <a-obj-model
+<!--     <a-obj-model
       src="#ducky-obj"
       position="0 1200 -3000"
       rotation="-210 -120 180"
@@ -56,7 +56,7 @@
       mtl="#pokeball-material"
       position="1000 1200 -3000">
       <a-animation attribute="rotation" begin="click" repeat="indefinite" to="0 360 0"></a-animation>
-    </a-obj-model>
+    </a-obj-model> -->
   
     <a-box color="red" width="1000" height="1000" depth="1000"
               position="-10000 1200 -3000" rotation="45 45 45" scale="1 2.5 1">
