testing adding objects Ar1

--- a/public/ar1.html
+++ b/public/ar1.html
@@ -36,11 +36,11 @@
 
     <a-camera position="0 1.8 500"> <a-cursor color="blue" /></a-camera>
 
-    <a-assets>
+<!--     <a-assets>
       <a-asset-item id="ducky-obj" src="ducky.obj"></a-asset-item>
       <a-asset-item id="pokeball" src="pokeball-vray.obj"></a-asset-item>
       <a-asset-item id="pokeball-material" src="pokeball-vray.mtl"></a-asset-item>
-    </a-assets>
+    </a-assets> -->
 
 <!--     <a-obj-model
       src="#ducky-obj"
@@ -58,11 +58,10 @@
       <a-animation attribute="rotation" begin="click" repeat="indefinite" to="0 360 0"></a-animation>
     </a-obj-model> -->
   
-    <a-box color="red" width="1000" height="1000" depth="1000"
+<!--     <a-box color="red" width="1000" height="1000" depth="1000"
               position="-10000 1200 -3000" rotation="45 45 45" scale="1 2.5 1">
               <a-animation attribute="rotation" begin="click" repeat="indefinite" to="0 360 0"></a-animation>
-    </a-box>
-    </a-entity>
+    </a-box> -->
   </a-scene>
 
 
