--- a/public/vr.html
+++ b/public/vr.html
@@ -79,13 +79,13 @@
 		    	position:"0 1200 -3000",
 		    	material:`color:${colorValue}; metalness:0.0; roughness:1.0;`,
 		    	message:"new Object"})
-				} else if (shapeValue === 'cone') {
-					socket.emit('newShape',{geometry: "primitive: cone;",
+				} else if (shapeValue === 'cylinder') {
+					socket.emit('newShape',{geometry: "primitive: cylinder; height: 1000; radius: 1000;",
 		    	position:"0 1200 -3000",
 		    	material:`color:${colorValue}; metalness:0.0; roughness:1.0;`,
 		    	message:"new Object"})
-				} else if (shapeValue === 'torus-knot') {
-					socket.emit('newShape',{geometry: "primitive: torus-knot;",
+				} else if (shapeValue === 'torus') {
+					socket.emit('newShape',{geometry: "primitive: torus; radius: 1000; radius-tubular=100",
 		    	position:"0 1200 -3000",
 		    	material:`color:${colorValue}; metalness:0.0; roughness:1.0;`,
 		    	message:"new Object"})
