--- a/public/vr.html
+++ b/public/vr.html
@@ -95,6 +95,8 @@
 				entity.setAttribute("material", `color: ${colorValue};`)
 				entity.setAttribute("position", '0 2 -1.877')
 				document.querySelector('a-scene').appendChild(entity)
+
+				socket.emit('sendingShapeAr2', {geometry: `primitive: ${shapeValue};`, material: `color: ${colorValue}; opacity: 0.5;`})
 			}
 	</script>
 	<style type="text/css">
