--- a/public/aframeAR.html
+++ b/public/aframeAR.html
@@ -24,6 +24,7 @@
       console.log('this is your object',data)
       let entity = document.createElement('a-entity');
       entity.setAttribute("geometry", data.geometry);
+      entity.setAttribute("position", data.position);
       entity.setAttribute("material", data.material);
       document.querySelector('a-scene').appendChild(entity)
     })
