--- a/public/aframeAR.html
+++ b/public/aframeAR.html
@@ -12,6 +12,7 @@
 	</a-scene>
 	<script>
 		var socket = io()
+		var products = false 
 		socket.on('newtext', function(data) {console.log(data)})
 
 		socket.on('goTodrawAr', function(data) {
@@ -20,11 +21,13 @@
     })
 
      socket.on('newShapeAr2', function(data) {
+
       console.log('this is your object',data)
       let entity = document.createElement('a-entity');
       entity.setAttribute("geometry", data.geometry);
       entity.setAttribute("position", data.position);
       entity.setAttribute("material", data.material);
+      entity.setAttribute('id', 'newObject')
       document.querySelector('a-scene').appendChild(entity)
     })
 	</script>
