--- a/public/aframeAR.html
+++ b/public/aframeAR.html
@@ -24,7 +24,7 @@
      		if(newObject) {
      			let oldObject = document.getElementById('newObject')
      			let scene = document.getElementsByTagName('a-scene')
-     			scene[0].removeChild(newObject)
+     			scene[0].removeChild(oldObject)
      		}
 	      console.log('this is your object',data)
 	      let entity = document.createElement('a-entity');
