--- a/public/vr.html
+++ b/public/vr.html
@@ -47,7 +47,8 @@
 			}
 			function creatingObjects(string) {
 				let entity = document.createElement('a-entity')
-				entity.setAttribute("tube", {"path": string, material: "color: red"})
+				entity.setAttribute("tube", {"path": string})
+				entity.setAttribute('material', "color: red")
 				document.querySelector('a-scene').appendChild(entity)
 			}
 
