changes of names

--- a/public/vr.html
+++ b/public/vr.html
@@ -130,7 +130,7 @@
 			</select>
 	</div>
 	<button type="button" onclick="receivedDataFromSelect()">Create and Send Object</button>
-	<button type="button" onclick="goToAr2()">Change to Mixed Reality 2 View</button>
+	<button type="button" onclick="goToAr2()">Change to Augmented Reality 2 Expereince</button>
 	<button type="button" onclick="test()">Howdy</button>
 	<button type="button" onclick="goToAr2()">Ar2</button>
 	<button type="button" onclick="drawAR()">Give me a object</button>
