--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <body>
 	<h3>Howdy!</h3>
 	<h2>Please select your viewing experience</h2>
-	<button id ="VR" onclick="location.href = 'https://stackproject.herokuapp.com/vr'" type="button">Creator VR</button>
-	<button id ="Mixed-Reality" onclick="location.href = 'https://stackproject.herokuapp.com/ar1'" type="button">Mixed Reality</button>
+	<button id ="VR" onclick="location.href = 'https://stackproject.herokuapp.com/vr'" type="button">Virtual Reality Experience</button>
+	<button id ="Mixed-Reality" onclick="location.href = 'https://stackproject.herokuapp.com/ar1'" type="button">Augmented Reality Experience</button>
 </body>
 </html>
