--- a/public/vr.html
+++ b/public/vr.html
@@ -131,8 +131,8 @@
 	</div>
 	<button type="button" onclick="receivedDataFromSelect()">Create and Send Object</button>
 	<button type="button" onclick="goToAr2()">Change to Augmented Reality 2 Expereince</button>
-	<button type="button" onclick="test()">Howdy</button>
-	<button type="button" onclick="goToAr2()">Ar2</button>
-	<button type="button" onclick="drawAR()">Give me a object</button>
+<!-- 	<button type="button" onclick="test()">Howdy</button>
+	<button type="button" onclick="goToAr2()">Ar2</button> -->
+	<button type="button" onclick="drawAR()">Give me a Shape</button>
 </body>
 </html>
