remove mouse marker

--- a/public/ar1.html
+++ b/public/ar1.html
@@ -34,7 +34,7 @@
 <body>
   <a-scene class="aframebox" embedded>
 
-    <a-camera position="0 2 500"> <a-cursor color="blue" /></a-camera>
+    <a-camera position="0 2 500"></a-camera>
 
     <a-assets>
       <a-asset-item id="pokeball" src="pokeball-vray.obj"></a-asset-item>
