--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,7 @@
 	<h2>Please select your viewing experience</h2>
 	<button id ="VR" onclick="location.href = 'https://stackproject.herokuapp.com/vr'" type="button">Virtual Reality Experience</button>
 	<button id ="Mixed-Reality" onclick="location.href = 'https://stackproject.herokuapp.com/ar1'" type="button">Augmented Reality Experience</button>
+	<a href = 'https://jeromeetienne.github.io/AR.js/data/images/HIRO.jpg'>Please print this marker for Augmented Reality 2 Experience</a>
+	<p>Please use magenta marker for drawing and green marker for erasing when using tracking.js</p>
 </body>
 </html>
