--- a/public/vr.html
+++ b/public/vr.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello, World! A-Frame VR World!</title>
+	<title>VR</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 	<script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v3.8.0/dist/aframe-extras.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
@@ -107,11 +111,52 @@
 			}
 	</style>
 <body>
-	<a-scene class="aframebox" embedded>
-<!-- 		<a-box position="0 2 0" width="1" height="1" depth="1" color="blue"></a-box>
-		<a-tube path="5 0 5, 5 0 -5, -5 0 -5" radius="0.5" material="color: red"></a-tube> -->
-	</a-scene>
-	<div>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+	<div class="container">
+		<a-scene class="aframebox" embedded style="margin: 0 auto"></a-scene>
+		<div class="row">
+			<div class="input-field col s6">
+		    <select id="shapeSelect">
+		      <option value="" disabled selected>Please Select a Shape</option>
+				  <option value="box">Box</option>
+				  <option value="sphere">Sphere</option>
+				  <option value="cylinder">Cylinder</option>
+				  <option value="torus">Torus</option>
+		    </select>
+			</div>
+			<div class="input-field col s6">
+		    <select id="colorSelect">
+		      <option value="" disabled selected>Please Select a Color</option>
+					  <option value="blue">Blue</option>
+					  <option value="red">Red</option>
+					  <option value="yellow">Yellow</option>
+					  <option value="green">Green</option>
+		    </select>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col s4">
+				<a type="button" onclick="receivedDataFromSelect()" class="waves-effect waves-light btn blue darken-4">Create and Send Object</a>
+			</div>
+			<div class="col s4">
+				<a type="button" onclick="goToAr2()" class="waves-effect waves-light btn blue darken-4">Change to Augmented Reality 2 Expereince</a>
+			</div>
+			<div class="col s4">
+				<a type="button" onclick="drawAR()" class="waves-effect waves-light btn blue darken-4" style="float: right">Give me a Shape</a>
+			</div>
+		</div>
+	</div>
+	<script type="text/javascript">
+		$(document).ready(function() {
+    	$('select').material_select();
+  	});
+	</script>
+</body>
+</html>
+
+
+<!-- 	<div>
 		<h3>Please Select a Shape</h3>
 			<p>Shape</p>
 			<select id="shapeSelect">
@@ -131,8 +176,4 @@
 	</div>
 	<button type="button" onclick="receivedDataFromSelect()">Create and Send Object</button>
 	<button type="button" onclick="goToAr2()">Change to Augmented Reality 2 Expereince</button>
-<!-- 	<button type="button" onclick="test()">Howdy</button>
-	<button type="button" onclick="goToAr2()">Ar2</button> -->
-	<button type="button" onclick="drawAR()">Give me a Shape</button>
-</body>
-</html>
+	<button type="button" onclick="drawAR()">Give me a Shape</button> -->
