--- a/public/vr.html
+++ b/public/vr.html
@@ -112,7 +112,7 @@
 	</style>
 <body>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 	<div class="container">
 		<a-scene class="aframebox" embedded style="margin: 0 auto"></a-scene>
 		<div class="row">
