--- a/public/index.html
+++ b/public/index.html
@@ -24,18 +24,11 @@
     </div>
     <div class="row">
       <div class="col s12" style="text-align: center;">
-        <p>Please print this marker for Augmented Reality 2 Experience</p>
+        <a href = 'https://jeromeetienne.github.io/AR.js/data/images/HIRO.jpg'>Please print or display with a phone this marker for Augmented Reality 2 Experience</a>
+        <p>Please use magenta marker for drawing and green marker for erasing when using tracking.js</p>
+        <a href="https://www.youtube.com/watch?v=qLxwWiIvlWs">Youtube Link</a>
       </div>
     </div>
   </div>
 </body>
 </html>
-
-
-
-<!--   <h3>Howdy!</h3>
-  <h2>Please select your viewing experience</h2>
-  <button id ="VR" onclick="location.href = 'https://stackproject.herokuapp.com/vr'" type="button">Virtual Reality Experience</button>
-  <button id ="Mixed-Reality" onclick="location.href = 'https://stackproject.herokuapp.com/ar1'" type="button">Augmented Reality Experience</button>
-  <a href = 'https://jeromeetienne.github.io/AR.js/data/images/HIRO.jpg'>Please print this marker for Augmented Reality 2 Experience</a>
-  <p>Please use magenta marker for drawing and green marker for erasing when using tracking.js</p> -->
