--- a/public/vr.html
+++ b/public/vr.html
@@ -107,14 +107,14 @@
 	<style type="text/css">
 		.aframebox {
 			height: 500px;
-			width: 500px;
+			border-style: solid;
 			}
 	</style>
 <body>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 	<div class="container">
-		<a-scene class="aframebox" embedded style="margin: 0 auto"></a-scene>
+		<a-scene class="aframebox" embedded style="margin: 0 auto; bo"></a-scene>
 		<div class="row">
 			<div class="input-field col s6">
 		    <select id="shapeSelect">
